--- a/src/components/ProductList/style.css
+++ b/src/components/ProductList/style.css
@@ -4,9 +4,12 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: stretch;
+  min-height: 356px;
 }
 
 .product-list__item {
   list-style: none;
-  width: 32%;
+  flex: 1 32%;
+  padding: 2%;
+  flex-grow: 1;
 }
